[package]
name = "redroc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
serde = "1.0.189"
serde_json = "1.0.107"
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "server"
path = "apps/server-rs/src/main.rs"
