[package]
name = "redroc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
axum = "0.6.20"
prost = "0.12.1"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.10.2", features = ["tls", "tls-roots"] }

[[bin]]
name = "server"
path = "apps/server-rs/src/main.rs"

[build-dependencies]
tonic-build = "0.10.2"
