[package]
name = "redroc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
axum = { version = "0.6.20", features = ["tower-log"] }
clap = { version = "4.4.7", features = ["env", "derive"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
http-types = "2.12.0"
prost = "0.12.1"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.10.2", features = ["tls", "tls-roots"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["full"] }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }

[[bin]]
name = "server"
path = "apps/server-rs/src/main.rs"

[build-dependencies]
tonic-build = "0.10.2"
