load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")

go_binary(
    name = "search",
    embed = [":search_lib"],
    gc_linkopts = [
        "-X",
        "main.release=bazelbuild",
    ],
    visibility = ["//visibility:public"],
)

go_library(
    name = "search_lib",
    srcs = ["main.go"],
    importpath = "github.com/m4salah/redroc/apps/search",
    visibility = ["//visibility:private"],
    deps = [
        "//libs/proto",
        "//libs/storage",
        "//libs/util",
        "@org_golang_google_grpc//:grpc",
        "@org_uber_go_zap//:zap",
    ],
)

go_image(
    name = "search_image",
    base = "@go_image_static//image:image",
    embed = [":search_lib"],
    gc_linkopts = [
        "-s",
        "-w",
        "-X",
        "main.release=bazelbuild",
    ],
    pure = "on",
)

container_push(
    name = "docker_push",
    format = "Docker",
    image = ":search_image",
    registry = "gcr.io",
    repository = "redroc-filestore-production/redroc-search",
    tag = "latest",
)
