load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "storage",
    srcs = [
        "buckets-object.go",
        "filestore-metadata.go",
        "storage.go",
    ],
    importpath = "github.com/m4salah/redroc/libs/storage",
    visibility = ["//visibility:public"],
    deps = [
        "//libs/util",
        "@com_google_cloud_go_firestore//:firestore",
        "@com_google_cloud_go_storage//:storage",
        "@org_golang_google_api//iterator",
        "@org_uber_go_zap//:zap",
    ],
)
