load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "github.com/m4salah/redroc/apps/server/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//apps/server/server",
        "//libs/util",
        "@org_golang_x_sync//errgroup",
        "@org_uber_go_zap//:zap",
    ],
)

go_image(
    name = "server_image",
    base = "@go_image_static//image:image",
    embed = [":cmd_lib"],
    pure = "on",
)

container_push(
    name = "docker_push",
    format = "Docker",
    image = ":server_image",
    registry = "gcr.io",
    repository = "redroc-filestore-production/redroc-server",
    tag = "latest",
)
