load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "server",
    srcs = [
        "routes.go",
        "server.go",
    ],
    importpath = "github.com/m4salah/redroc/apps/server/server",
    visibility = ["//visibility:public"],
    deps = [
        "//apps/server/handlers",
        "//apps/server/middleware",
        "@com_github_go_chi_chi_v5//:chi",
        "@org_uber_go_zap//:zap",
    ],
)
